# arcturus_browser

./: README.md  setup.cfg
arcturus_browser/: __init__.py  arcturus.py  extract_data.py  overlap.py  read_linelist.py
arcturus_browser/data/: ab10000.  ab10050.  ab10100.  ab10150.  ab10350.  ab10400.  ab10450.  ab10500.  ab10550.  ab10700.  ab10800.  ab10850.  ab10900.  ab1874.  ab1881.  ab1902.  ab1909.  ab1916.  ab1923.  ab1930.  ab1937.  ab1944.  ab1951.  ab1958.  ab1972.  ab1979.  ab1993.  ab2000.  ab2007.  ab2021.  ab2035.  ab2042.  ab2049.  ab2063.  ab2070.  ab2077.  ab2084.  ab2119.  ab2126.  ab2154.  (+131 more)
atlas/: ab10200.  ab10250.  ab10300.  ab10600.  ab10650.  ab10750.  ab1867.  ab1888.  ab1895.  ab1965.  ab1986.  ab2014.  ab2028.  ab2056.  ab2091.  ab2133.  ab2140.  ab2147.  ab2161.  ab2175.  ab2182.  ab2400.  ab2415.  ab2445.  ab2475.  ab2490.  ab2505.  ab2550.  ab2580.  ab2595.  ab2610.  ab2655.  ab2715.  ab2730.  ab2760.  ab2805.  ab2820.  ab2895.  ab2910.  ab2940.  (+105 more)
