[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = arcturus_browser
description = Interface to browse the spectrum of Arcturus
long_description = Package to view the spectrum of the star Arcturus and associated line list from Hinkle et al. 
author = Tuan Do
author_email = 
license = BSD
url = https://github.com/followthesheep/arcturus_browser
edit_on_github = False
github_project = followthesheep/arcturus_browser
